added basic calculator II and basic calculator III

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -30,7 +30,7 @@
 <br>
 <div class="codingSubSectionName">Subset</div>
 <ul>
-     <li><a href="solution/subset.html">Subset (Template !)</a> <a href="http://www.lintcode.com/en/problem/subsets/">Q</a>  </li>  
+     <li><a href="solution/subset.html">Subset (Template !)</a> <a href="http://www.lintcode.com/en/problem/subsets/">Q</a>  </li>
 	 <li><a href="solution/subsets-ii.html">Subset-ii</a> <a href="http://www.lintcode.com/en/problem/subsets-ii/">Q</a></li>
 	 <li><a href="solution/combinationsum.html">Combination Sum</a> <a href="http://www.lintcode.com/en/problem/combination-sum/">Q</a></li>
 	 <li><a href="solution/combinationsum-ii.html">Combination Sum-ii</a> <a href="http://www.lintcode.com/en/problem/combination-sum-ii/">Q</a></li>
@@ -56,13 +56,13 @@
 
 <div class="codingSubSectionName">Graph Theory</div>
 <ul>
-	 
+
 	 <li> <a href="solution/graphknowledge.html">图的基本表示法</a></li>
 	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(无向图里能否从一点到另一点，理解背诵DFS BFS模板+Google面试题目)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 	 <li><a href="solution/EvaluateDivision.html">Evaluate Division(无向图里能否从一点到另一点，返回权重，只能用Graph DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
 	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find 应用 ： 1无向图求连通子图个数， 2.无向图找环</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
      <li><a href="solution/RedundentConnection.html">Redundant Connection （无向图找环）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
-	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(无向图求连通子图个数)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>      
+	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(无向图求连通子图个数)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>
 	<li><a href="solution/isolatedislandII.html">island count ii (无向图求连通子图个数）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
 	 	 	 <li style="color:red">DFS flood fill 模板专题 用处： 1.求岛的个数， 2求面积， 3求坐标，4求周长， 5给岛染色 ）</li>
 	 	 <li><a href="solution/numberOfIslands.html">Number of islands(Template!)</a> <a href=https://leetcode.com/problems/number-of-islands/description/>Q</a></li>
@@ -70,15 +70,15 @@
 	 <li><a href="solution/floodFill.html">flood fill</a> <a href=https://leetcode.com/problems/flood-fill/description/>Q</a></li>
 	 <li><a href="solution/SurroundedRegions.html">surrounded Area</a> <a href=http://www.lintcode.com/en/problem/surrounded-regions/>Q</a></li>
 	 <li><a style="color:red" ; href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图有层次的遍历找环)</a></li>
-	 <li><a href="solution/courseschedule.html">course schedule(Topological sorting</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
-	 <li><a href="solution/coursescheduleii.html">course schedule II</a> <a href="http://www.lintcode.com/en/problem/course-schedule-ii/">Q</a>  </li>  
+	 <li><a href="solution/courseschedule.html">course schedule(Topological sorting</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>
+	 <li><a href="solution/coursescheduleii.html">course schedule II</a> <a href="http://www.lintcode.com/en/problem/course-schedule-ii/">Q</a>  </li>
 	 <li><a href="solution/AlienDictionary.html">Alien dictionary(Topological sorting with duplicate edges)</a> <a href=https://leetcode.com/problems/alien-dictionary/description/>Q</a></li>
      <li ><a style="color:red" ; href="solution/reconstructitinerray.html">Reconstruct Itinerary(有向图DFS搜索某种路径： 断边法)</a> <a href="https://leetcode.com/problems/reconstruct-itinerary/description/">Q</a>  </li>
-	 <li ><a href="solution/FindEventualSafeStates.html">Find Eventual safe sttes(有向图DFS找环：暴力搜索法， 染色法)</a> <a href=https://leetcode.com/problems/find-eventual-safe-states/description/>Q</a>  </li> 
-	 <li ><a href="solution/NetworkDelayTime.html">NetWork Delay(有向图DFS, 求全局权重最优)</a> <a href=https://leetcode.com/problems/network-delay-time/description/>Q</a>  </li> 
+	 <li ><a href="solution/FindEventualSafeStates.html">Find Eventual safe sttes(有向图DFS找环：暴力搜索法， 染色法)</a> <a href=https://leetcode.com/problems/find-eventual-safe-states/description/>Q</a>  </li>
+	 <li ><a href="solution/NetworkDelayTime.html">NetWork Delay(有向图DFS, 求全局权重最优)</a> <a href=https://leetcode.com/problems/network-delay-time/description/>Q</a>  </li>
 
-     <li ><a style="color:red" ; href="solution/MinimalHeightTree.html">Tree Graph（树图剪枝法）</a> <a href="https://leetcode.com/problems/minimum-height-trees/description/">Q</a>  </li>  
-	 
+     <li ><a style="color:red" ; href="solution/MinimalHeightTree.html">Tree Graph（树图剪枝法）</a> <a href="https://leetcode.com/problems/minimum-height-trees/description/">Q</a>  </li>
+
 
 </ul>
 
@@ -133,7 +133,7 @@
 	<li><a style="color:green"; href="solution/searchInRotatedSortedArray.html">Rotated sorted Array(Search in rotated sorted Array)</a> <a href="http://www.lintcode.com/en/problem/search-in-rotated-sorted-array/">Q</a>  </li>
 	<li><a href="solution/searchInRotatedSortedArray-ii.html">Rotated sorted Array(Search in rotated sorted Array with duplicate)</a> <a href="http://www.lintcode.com/en/problem/search-in-rotated-sorted-array-ii/">Q</a>  </li>
 
-	
+
 	<li><a style="color:green"; href="solution/FindMinimalInrotatedArray.html">Rotated sorted Array(Find Minimum in Rotated Sorted Array)</a> <a href="http://www.lintcode.com/en/problem/find-minimum-in-rotated-sorted-array/">Q</a>  </li>
 	<li><a href="solution/FindMinimalInrotatedArray-ii.html">Rotated sorted Array(Find Minimum in Rotated Sorted Array with duplicates)</a> <a href="http://www.lintcode.com/en/problem/find-minimum-in-rotated-sorted-array-ii/">Q</a>  </li>
 
@@ -146,7 +146,7 @@
 <ul>
     <li><a href="lecture/Lecture_3._Binary_Tree__Divide_Conquer.v3.4.pdf">Lecture</li>
 	<li><a href="solution/BinaryTreeDivideAndConquer.html">Divided and Conquer(分治深度理解)</li>
-	
+
 	<li><a style="color:green" ; href="solution/BinaryTreePathSum.html">Binary Tree Path Sum(二分树遍历模板)</a> <a href="http://www.lintcode.com/en/problem/binary-tree-path-sum/">Q</a>  </li>
 	<li><a href="solution/BinaryTreePathSum.html">Binary Tree Paths(二分树遍历)</a> <a href="http://www.lintcode.com/en/problem/binary-tree-paths/">Q</a>  </li>
 	<li><a style="color:green" ;  href="solution/subTreeWithMaxiumAverage.html">sub Tree With Maxium average(分治模板)</a> <a href="http://www.lintcode.com/en/problem/subtree-with-maximum-average/#">Q</a>  </li>
@@ -242,13 +242,15 @@
 
 <li><a style=" color : green"; href="solution/StringSummary.html">String Summary</a></li>
 
-	 
+
 <ul>
 	 <li><a href="solution/longestSubStrwithoutduplicate.html">longest substring without duplicate(最长无重复子串, 双指针异步）</a> <a href=“http://www.lintcode.com/en/problem/longest-substring-without-repeating-characters/#”>Q</a>  </li>
 	 <li><a href="solution/longestsubStringAtmostKdistinctchars.html">longest substring with at most k distinct substring(最长最多k个不同字符子字符串， 双指针异步）</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
 	 <li><a href="solution/MinimalWindowSubstring.html">Minimal Window Substring(双指针异步)</a> <a href="https://leetcode.com/problems/longest-palindromic-substring/description/">Q</a>  </li>
 	 <li><a href="solution/ValidWordAbbreviation.html">Valid word abbreviation(字符串压缩，双指针同步）</a> <a href="https://leetcode.com/problems/valid-word-abbreviation/description/">Q</a>  </li>
 	 <li><a href="solution/addBoldTaginString.html">Add bold tag in string(根据某种规则修改字符串）</a> <a href="https://leetcode.com/problems/add-bold-tag-in-string/description/">Q</a>  </li>
+   <li><a href="solution/BasicCalculator.html">Basic Calculator (字符串表达式 +-（） 难 )</a> <a href="https://leetcode.com/problems/basic-calculator/description/">Q</a>  </li>
+   <li><a href="solution/basicCalculatorII.html">Basic Calculator II (字符串表达式 +-*/ 难 )</a> <a href="https://leetcode.com/problems/basic-calculator-ii/description/">Q</a>  </li>
 
 	 <li><a href="solution/LongestPalindromSubstring.html">Longest palindrom substring最长回文子串</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
 	 <li><a href="solution/reverseString.html">Reverse string</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
@@ -276,7 +278,7 @@
 	 <li><a href="solution/perfectSquare_DP.html">perfect Square (n^2) 对比DFS(2^n)</a> <a href=https://leetcode.com/problems/perfect-squares/description/>Q</a>  </li>
 	 <li><a href="solution/workBreak_DP.html">Word break (n^3) 对比用DFS做 (n*2^n)</a> <a href=https://leetcode.com/problems/word-break/description/> Q</a></li>
 
-      
+
 </ul>
 
 
@@ -291,17 +293,17 @@
 
 	 <li><a href="interview/onSite209.txt">Amazon onSite Seattle 02/2018</a> </li>
 
-	 
+
 	 <li><a href="interview/AmazonInterview1_27_2017.txt">Amazon 01/2017 Phone</a> </li>
-	 
-	 
+
+
 	 <li><a href="interview/Facebook_2_24_2017.txt">Facebook Phone 02/2017</a> </li>
-	 
+
 	 <li><a href="interview/uber_4_6_2016.txt">Uber Phone 4/2017</a> </li>
 	 <li><a href="interview/uber_4_25_2018_phone.txt">Uber Phone 4/2018</a> </li>
 
 	 </ul>
-	 
+
 <div class="codingSectionName">Resume</div>
 <ul>
 	 <li><a href="interview/resume.doc">Resume</a> </li>
