--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -290,7 +290,10 @@
 <ul>
      	 <li><a href="interview/InterviewSummary.txt">面试心得</a> </li>
      	 <li><a href="interview/CompanyLevelProcess.txt">各大公司面试流程和职位等级</a> </li>
+		 <li><a href="interview/projectIntro.txt">快速自我介绍 +　工作经验介绍</a> </li>
 
+
+		 
 	 <li><a href="interview/onSite209.txt">Amazon onSite Seattle 02/2018</a> </li>
 
 
@@ -304,6 +307,17 @@
 
 	 </ul>
 
+
+	 
+<div class="codingSectionName">Behavior</div>
+<ul>
+
+     <li><a href="https://www.jiuzhang.com/article?tags=behavior-interview">九章讲解Behavior Question</a></li>
+     <li><a href="https://www.google.com/url?hl=en&q=https://mp.weixin.qq.com/s/PteQ_cJrVFVWO5iGzLGYjg&source=gmail&ust=1524788109417000&usg=AFQjCNFpoexeMT38wA3QwrJsQO8UGRzQeg">How to handle multiple task</a></li>
+</ul>
+	 
+	 
+	 
 <div class="codingSectionName">Resume</div>
 <ul>
 	 <li><a href="interview/resume.doc">Resume</a> </li>
