--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -251,6 +251,7 @@
 	 <li><a href="solution/addBoldTaginString.html">Add bold tag in string(根据某种规则修改字符串）</a> <a href="https://leetcode.com/problems/add-bold-tag-in-string/description/">Q</a>  </li>
    <li><a href="solution/BasicCalculator.html">Basic Calculator (字符串表达式 +-（） 难 )</a> <a href="https://leetcode.com/problems/basic-calculator/description/">Q</a>  </li>
    <li><a href="solution/basicCalculatorII.html">Basic Calculator II (字符串表达式 +-*/ 难 )</a> <a href="https://leetcode.com/problems/basic-calculator-ii/description/">Q</a>  </li>
+   <li><a href="solution/NextClosestTime.html">NextClosest time(字符串模仿，暴力 )</a> <a href=https://leetcode.com/problems/next-closest-time/description/>Q</a>  </li>
 
 	 <li><a href="solution/LongestPalindromSubstring.html">Longest palindrom substring最长回文子串</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
 	 <li><a href="solution/reverseString.html">Reverse string</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
