--- a/html/solution/BasicCalculator.html
+++ b/html/solution/BasicCalculator.html
@@ -63,12 +63,10 @@ class Solution {
 
 
 <div class="comment">
+数据结构 ：用 Stack存叠加结果和符号<br>
 算法 ： 维持一个 sum and sign <br>
-数据结构 ：用 Stack一层一层的拨皮<br>
-遇到数字就更新sum,<br>
-遇到符号就更新sign<br>
-遇到 (, 就把当前的sum, sign 存入 stack, 然后重新初始化 sum, sign继续往前走， 遇到‘)’就把之前的值弹出来，和当前值相加<br>
-此题目不容易一次写对。<br>
+
+遇到数字就更新sum,、遇到符号就更新sign，遇到 (, 就把当前的sum, sign 存入 stack, 然后重新初始化 sum, sign继续往前走， 遇到‘)’就把之前的值弹出来，和当前值相加<br>
 
 
 
