--- a/html/solution/basicCalculatorII.html
+++ b/html/solution/basicCalculatorII.html
@@ -79,6 +79,10 @@ for( int i : stack){
 }
 
 
+s = s.replace(" ", "")
+用replace给字符串去空格必须把值返回给自己本身。
+
+
 </code></pre>
 
 
@@ -87,10 +91,13 @@ for( int i : stack){
 
 
 <div class="comment">
-算法： 用一个stack往里面加数，最后在计算，读字符串的过程中不计算。 <br>
-如果遇到数字就读， 如果遇到+-*/,就去判断之前的符号，如果是+,-就直接压进去， 如果是*/, 就弹出值来和当前值做*/ <br>
+数据结构： 用一个stack存分段值，不用存符号<br>
 
-这题目非常难在人脑里进行模拟 <br>
+维持一个 number, 一个符号
+
+算法简介 ：遇到符号，往前处理<br>
+
+1如果遇到数字就读， 如果遇到符号,就去判断之前的符号，如果是+,-就直接压进去， 如果是*/, 就弹出值来和当前值做*/， 然后在压进去 <br>
 
 
 
