added group shifted string

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -254,6 +254,8 @@
     <li><a href="solution/basicCalculatorIII.html">Basic Calculator III (字符串表达式 +-*/() 与2模板一致 )</a> <a href="https://leetcode.com/problems/basic-calculator-iii/description/">Q</a>  </li>
    <li><a href="solution/NextClosestTime.html">NextClosest time(字符串模仿，暴力 )</a> <a href=https://leetcode.com/problems/next-closest-time/description/>Q</a>  </li>
 
+<li><a href="solution/groupshiftedString.html">group shifted string(字符串组的巧妙分组)</a> <a href=https://leetcode.com/problems/group-shifted-strings/description/>Q</a>  </li>
+
 	 <li><a href="solution/LongestPalindromSubstring.html">Longest palindrom substring最长回文子串</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
 	 <li><a href="solution/reverseString.html">Reverse string</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
 	 <li><a href="http://www.lintcode.com/en/problem/expression-expand/">expression expand(Divide and conquer)</a> </li>
@@ -295,7 +297,7 @@
 		 <li><a href="interview/projectIntro.txt">快速自我介绍 +　工作经验介绍</a> </li>
 
 
-		 
+
 	 <li><a href="interview/onSite209.txt">Amazon onSite Seattle 02/2018</a> </li>
 
 
@@ -310,16 +312,16 @@
 	 </ul>
 
 
-	 
+
 <div class="codingSectionName">Behavior</div>
 <ul>
 
      <li><a href="https://www.jiuzhang.com/article?tags=behavior-interview">九章讲解Behavior Question</a></li>
      <li><a href="https://www.google.com/url?hl=en&q=https://mp.weixin.qq.com/s/PteQ_cJrVFVWO5iGzLGYjg&source=gmail&ust=1524788109417000&usg=AFQjCNFpoexeMT38wA3QwrJsQO8UGRzQeg">How to handle multiple task</a></li>
 </ul>
-	 
-	 
-	 
+
+
+
 <div class="codingSectionName">Resume</div>
 <ul>
 	 <li><a href="interview/resume.doc">Resume</a> </li>
