--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -157,6 +157,7 @@
 	<li><a href="solution/BinaryTreeLongestConsecutiveSequence.html">binary Tree Longest Consecutive sequence(分治)</a> <a href="http://www.lintcode.com/en/problem/binary-tree-longest-consecutive-sequence/">Q</a>  </li>
     <li><a href="solution/SymmetricBinaryTree.html">symmetric binary tree</a> <a href="http://www.lintcode.com/en/problem/symmetric-binary-tree/">Q</a>  </li>
     <li><a href="solution/binaryTreeSerilization.html">Binary Tree Serilization</a> <a href="http://www.lintcode.com/en/problem/binary-tree-serialization/#">Q</a>  </li>
+    <li><a href="solution/DeleteaNodeinBST.html">Delete a node in BST</a> <a href=https://leetcode.com/problems/delete-node-in-a-bst/description/>Q</a>  </li>
 </ul>
 
 <div class="codingSectionName"> Linked List</div>
@@ -214,6 +215,7 @@
      <li><a style="color:red"; href="solution/sortColors.html">sort colors ( template!)</a> <a href="">Q</a>  </li>
      <li><a href="solution/sortColors-ii.html">sort colors ii</a> <a href="">Q</a>  </li>
      <li><a href="solution/sortLettersByCase.html">sort letter by cases</a> <a href="http://www.lintcode.com/en/problem/sort-letters-by-case/">Q</a>  </li>
+     <li><a href="solution/kEmptySlot.html">K Empty slots （很难，感觉像竞赛题目）</a> <a href=https://leetcode.com/problems/k-empty-slots/description/>Q</a>  </li>
 
 </ul>
 
@@ -247,8 +249,11 @@
 	 <li><a href="solution/longestSubStrwithoutduplicate.html">longest substring without duplicate(最长无重复子串, 双指针异步）</a> <a href=“http://www.lintcode.com/en/problem/longest-substring-without-repeating-characters/#”>Q</a>  </li>
 	 <li><a href="solution/longestsubStringAtmostKdistinctchars.html">longest substring with at most k distinct substring(最长最多k个不同字符子字符串， 双指针异步）</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
 	 <li><a href="solution/MinimalWindowSubstring.html">Minimal Window Substring(双指针异步)</a> <a href="https://leetcode.com/problems/longest-palindromic-substring/description/">Q</a>  </li>
-	 <li><a href="solution/ValidWordAbbreviation.html">Valid word abbreviation(字符串压缩，双指针同步）</a> <a href="https://leetcode.com/problems/valid-word-abbreviation/description/">Q</a>  </li>
+
+   <li><a href="solution/StringCompression.html">String compression(字符串压缩，读写指针同步）</a> <a href=https://leetcode.com/problems/string-compression/submissions/1>Q</a>  </li>
+   <li><a href="solution/ValidWordAbbreviation.html">Valid word abbreviation(字符串压缩，双指针同步）</a> <a href="https://leetcode.com/problems/valid-word-abbreviation/description/">Q</a>  </li>
 	 <li><a href="solution/addBoldTaginString.html">Add bold tag in string(根据某种规则修改字符串）</a> <a href="https://leetcode.com/problems/add-bold-tag-in-string/description/">Q</a>  </li>
+
    <li><a href="solution/BasicCalculator.html">Basic Calculator (字符串表达式 +-（） 难 )</a> <a href="https://leetcode.com/problems/basic-calculator/description/">Q</a>  </li>
          <li><a href="solution/basicCalculatorII.html">Basic Calculator II (字符串表达式 +-*/ 难 )</a> <a href="https://leetcode.com/problems/basic-calculator-ii/description/">Q</a>  </li>
     <li><a href="solution/basicCalculatorIII.html">Basic Calculator III (字符串表达式 +-*/() 与2模板一致 )</a> <a href="https://leetcode.com/problems/basic-calculator-iii/description/">Q</a>  </li>
