--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -106,6 +106,8 @@
 	 <li><a href="solution/zombieinMatrix.html">Zombie in Matrix</a> <a href="http://www.lintcode.com/en/problem/zombie-in-matrix/">Q</a></li>
      <li><a href="solution/knightShortestpath.html">Knight shortest path</a> <a href="http://www.lintcode.com/en/problem/knight-shortest-path/">Q</a></li>
      <li><a href="solution/postOfficeII.html">Post office II</a> <a href="http://www.lintcode.com/en/problem/build-post-office-ii/">Q</a></li>
+     <li><a href="solution/maze.html">maze</a> <a href="https://leetcode.com/problems/the-maze/description/">Q</a></li>
+
 </ul>
 <br>
 
