added 2D search bfs dfs template

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -58,7 +58,7 @@
 <ul>
 
 	 <li> <a href="solution/graphknowledge.html">图的基本表示法</a></li>
-	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(无向图里能否从一点到另一点，理解背诵DFS BFS模板+Google面试题目)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
+	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(无向图里能否从一点到另一点，必备模板)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 	 <li><a href="solution/EvaluateDivision.html">Evaluate Division(无向图里能否从一点到另一点，返回权重，只能用Graph DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
 	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find 应用 ： 1无向图求连通子图个数， 2.无向图找环</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
      <li><a href="solution/RedundentConnection.html">Redundant Connection （无向图找环）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
@@ -101,6 +101,8 @@
 
 <div class="codingSubSectionName">2D BFS</div>
 <ul>
+
+	 <li><a style="color:red"; href="solution/2DBoardSearch.html">2D图盘能否从一点走到另一点模板（BFS + DFS 必背模板）</a> <a href="http://www.lintcode.com/en/problem/word-search/">Q</a></li>
 	 <li><a href="solution/SearchWord.html">Word Search</a> <a href="http://www.lintcode.com/en/problem/word-search/">Q</a></li>
 	 <li><a href="solution/numberOfIslands.html">Number of Islands</a> <a href="http://www.lintcode.com/en/problem/number-of-islands/">Q</a></li>
 	 <li><a href="solution/zombieinMatrix.html">Zombie in Matrix</a> <a href="http://www.lintcode.com/en/problem/zombie-in-matrix/">Q</a></li>
