--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -20,8 +20,8 @@
 
 <div class="codingSubSectionName">Permutation</div>
 <ul>
-    <li> <a href="solution/permutation.html">Permutation(对比subsets模板和permutation模板的区别）</a> </li>
-    <li> <a href="solution/permutation-ii.html">Permutation ii</a></li>
+    <li> <a href="solution/permutation.html">Permutation(对比subsets模板和permutation模板的区别）</a>  <a href="https://leetcode.com/problems/permutations/description/">Q</a>  </li>
+    <li> <a href="solution/permutation-ii.html">Permutation ii</a> <a href="https://leetcode.com/problems/permutations-ii/description/">Q</a> </li>
     <li> <a href="solution/string permutation-ii.html">String Permutation ii</a> </li>
 	<li> <a href="solution/letterCombination.html">Letter combination( Different element on each level)</a></li>
 
@@ -32,8 +32,8 @@
 <ul>
      <li><a href="solution/subset.html">Subset (Template !)</a> <a href="http://www.lintcode.com/en/problem/subsets/">Q</a>  </li>
 	 <li><a href="solution/subsets-ii.html">Subset-ii</a> <a href="http://www.lintcode.com/en/problem/subsets-ii/">Q</a></li>
-	 <li><a href="solution/combinationsum.html">Combination Sum</a> <a href="http://www.lintcode.com/en/problem/combination-sum/">Q</a></li>
-	 <li><a href="solution/combinationsum-ii.html">Combination Sum-ii</a> <a href="http://www.lintcode.com/en/problem/combination-sum-ii/">Q</a></li>
+	 <li><a href="solution/combinationsum.html">Combination Sum</a> <a href="https://leetcode.com/problems/combination-sum/description/">Q</a></li>
+	 <li><a href="solution/combinationsum-ii.html">Combination Sum-ii</a> <a href="https://leetcode.com/problems/combination-sum-ii/description/">Q</a></li>
 	 <li><a href="solution/combinations.html">Combinations</a> <a href="http://www.lintcode.com/en/problem/combinations/">Q</a></li>
 	 <li><a href="solution/NQueens.html">NQueens</a><a href="http://www.lintcode.com/en/problem/n-queens/"> Q</a></li>
 	 <li><a href="solution/NQueens-ii.html">NQueens-ii</a><a href="http://www.lintcode.com/en/problem/n-queens-ii/"> Q</a></li>
