--- a/html/solution/RouteBetweenTwoNodesinGraph.html
+++ b/html/solution/RouteBetweenTwoNodesinGraph.html
@@ -106,12 +106,12 @@ public class Solution {
 
 void dfs( start, matrix){
 
-    1. 递归的结束条件 （ 一般是越界，或者撞墙）
+    1. 递归的结束条件 （ 一般是越界，或者撞墙，或者访问过的）
 	
 	2. 递归达到某种要求（走到某点， 返回 ）
 	
 	3. 去重 （ 这一步，要开题目的走法， 如果按照题目的意思，你可以走回原来的坐标，就一定需要去重（如number of islands) 如果走不回去就可以不去重，因为下一层取不到, 如下题）
-	   去重的方法一般是标记为墙。
+	   去重的方法如果是连续走法就是标记为墙，如果非连续走法（maze)传一个boolean array进去
 	
 	4.  braodcast DFS
 }
