--- a/html/solution/graphknowledge.html
+++ b/html/solution/graphknowledge.html
@@ -51,7 +51,7 @@ b. Adjacent list    ( 用顶点来表示图,最常见的一种表达方式）
 c.   用边来表达图, 可以遍历转化成点图
 
 int[][] graph = { {1, 2}, {2, 3}, {2,4}  }
-
+建图的时候，要考虑到一条边有两条路径。 {1,2} =》 表示的时候1->{2}, 2->{1}
 
 
 d. 图的一些有用結論 
