--- a/html/solution/UnionFind.html
+++ b/html/solution/UnionFind.html
@@ -1,11 +1,17 @@
 
 
 
-Union Find algorithm ( disjoint set, 中文是 不可交集）<br><br>
+Union Find algorithm ( disjoint set, 中文是 查并集）<br><br>
 <a href="https://www.youtube.com/watch?v=UBY4sF86KEY">Youtube tutorial</a>  <br>
 
-用处 ：<br>
- 无向图合并
+泛行用处 ：图里面合并节点<br>
+具体用处 ： 1图里找联通子图个数，2图里找环
+具体应用题目：
+<li><a href="solution/RedundentConnection.html">Redundant Connection （有向图找环， DFS）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
+<li><a href="solution/isolatedislandII.html">island count ii (无向图求连通子图个数）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
+
+ 
+对外接口就是两个节点。
 
 算法<br>  Step 1 : 图里的每一个点是一个独立的不可交集<br>
         step 2 : 按照你自己定义的法则进行合并。<br><br>
