--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -58,7 +58,7 @@
 <ul>
 
 	 <li> <a href="solution/graphknowledge.html">图的基本表示法</a></li>
-	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(无向图里能否从一点到另一点，必背模板！)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
+	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，必背模板！)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 	 <li><a href="solution/EvaluateDivision.html">Evaluate Division(有向图里能否从一点到另一点，返回权重，DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
 	 <li><a href="solution/RedundentConnection.html">Redundant Connection （有向图找环， DFS）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
 	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(BFS)</a> <a href=https://www.lintcode.com/problem/graph-valid-tree/description>Q</a>  </li>
@@ -151,14 +151,11 @@
 <ul>
     <li><a href="lecture/Lecture_3._Binary_Tree__Divide_Conquer.v3.4.pdf">Lecture</li>
 	<li><a href="solution/BinaryTreeDivideAndConquer.html">Divided and Conquer(分治深度理解)</li>
+	<li><a href="solution/BinaryTreePathSum.html">Binary Tree Paths(二分树遍历)</a> <a href=https://leetcode.com/problems/binary-tree-paths/description/>Q</a>  </li>
+  <li><a href="solution/BinaryTreeMaximumPathSum.html">Binary Tree Maximum PathSum(二分树分治)</a> <a href=https://leetcode.com/problems/binary-tree-maximum-path-sum/description/>Q</a>  </li>
 
-	<li><a style="color:green" ; href="solution/BinaryTreePathSum.html">Binary Tree Path Sum(二分树遍历模板)</a> <a href="http://www.lintcode.com/en/problem/binary-tree-path-sum/">Q</a>  </li>
-	<li><a href="solution/BinaryTreePathSum.html">Binary Tree Paths(二分树遍历)</a> <a href="http://www.lintcode.com/en/problem/binary-tree-paths/">Q</a>  </li>
-	<li><a style="color:green" ;  href="solution/subTreeWithMaxiumAverage.html">sub Tree With Maxium average(分治模板)</a> <a href="http://www.lintcode.com/en/problem/subtree-with-maximum-average/#">Q</a>  </li>
+	<li><a style="color:green" ;  href="solution/subTreeWithMaxiumAverage.html">sub Tree With Maxium average(分治模板)</a> <a href="http://www.lintcode.com/en/problem/subtree-with-maximum-average">Q</a>  </li>
 	<li><a style="color:green" ;  href="solution/isSubTree.html">isSubTree ( 点对树 + 树对数 两个分治模板结合</a> <a href="https://leetcode.com/problems/subtree-of-another-tree/description/">Q</a>  </li>
-
-    <li><a href="solution/identicalbinarytree.html">Identical binary tree(树对树分治模板)</a> <a href="http://www.lintcode.com/en/problem/identical-binary-tree/">Q</a>  </li>
-	<li><a href="solution/minimalDepthOfBinaryTree.html">Minimal Depth of Binary Tree(分治)</a> <a href="http://www.lintcode.com/en/problem/minimum-depth-of-binary-tree/">Q</a>  </li>
 	<li><a href="solution/BinaryTreeLongestConsecutiveSequence.html">binary Tree Longest Consecutive sequence(分治)</a> <a href="http://www.lintcode.com/en/problem/binary-tree-longest-consecutive-sequence/">Q</a>  </li>
     <li><a href="solution/SymmetricBinaryTree.html">symmetric binary tree</a> <a href="http://www.lintcode.com/en/problem/symmetric-binary-tree/">Q</a>  </li>
     <li><a href="solution/binaryTreeSerilization.html">Binary Tree Serilization</a> <a href="http://www.lintcode.com/en/problem/binary-tree-serialization/#">Q</a>  </li>
@@ -243,6 +240,9 @@
 	 <li><a href="solution/Implement3stacksbysinglearray.html">Implement three stacks by a single array</a> <a href="http://www.lintcode.com/en/problem/implement-three-stacks-by-single-array/">Q</a>  </li>
 	 <li><a href="solution/implementQueueByTwoStacks.html">Implement a queue by two stacks</a> <a href="http://www.lintcode.com/en/problem/implement-queue-by-two-stacks/">Q</a>  </li>
 	 <li><a href="solution/implementStackbyTwoQueues.html">Implement a stack by two queues</a> <a href="http://www.lintcode.com/en/problem/implement-stack-by-two-queues/">Q</a>  </li>
+   <li><a style="color:red"; href="solution/Trie.html">Trie<a href=https://leetcode.com/problems/implement-trie-prefix-tree/description/>Q</a>  </li>
+   <li><a  href="solution/AddandSearchWordDatastructuredesign">Trie<a href=https://leetcode.com/problems/add-and-search-word-data-structure-design/description/>Q</a>  </li>
+
 </ul>
 
 <div class="codingSectionName">String</div>
