--- a/html/solution/RouteBetweenTwoNodesinGraph.html
+++ b/html/solution/RouteBetweenTwoNodesinGraph.html
@@ -133,7 +133,7 @@ public class Solution {
             return;
         }
         
-        for( int i=0; i<s.neighbors.size(); i++){
+        for( int i=0; i&lt;s.neighbors.size(); i++){
             DirectedGraphNode n = s.neighbors.get(i);
             s.neighbors.remove(i);
             dfs(n, t);
