--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -242,6 +242,9 @@
 	 <li><a href="solution/Implement3stacksbysinglearray.html">Implement three stacks by a single array</a> <a href="http://www.lintcode.com/en/problem/implement-three-stacks-by-single-array/">Q</a>  </li>
 	 <li><a href="solution/implementQueueByTwoStacks.html">Implement a queue by two stacks</a> <a href="http://www.lintcode.com/en/problem/implement-queue-by-two-stacks/">Q</a>  </li>
 	 <li><a href="solution/implementStackbyTwoQueues.html">Implement a stack by two queues</a> <a href="http://www.lintcode.com/en/problem/implement-stack-by-two-queues/">Q</a>  </li>
+   <li><a href="solution/myCalendarI.html">My Calendar I(TreeMap)</a> <a href=https://leetcode.com/problems/my-calendar-i/description/>Q</a>  </li>
+   <li><a href="solution/myCalendarII.html">My Calendar I(TreeMap)</a> <a href=https://leetcode.com/problems/my-calendar-ii/description/>Q</a>  </li>
+
 </ul>
 
 <div class="codingSectionName">String</div>
@@ -325,6 +328,7 @@
 <div class="codingSectionName">Behavior</div>
 <ul>
 
+     <li><a href="behavior/behavior.txt">常见行为问题答题例子</a></li>
      <li><a href="https://www.jiuzhang.com/article?tags=behavior-interview">九章讲解Behavior Question</a></li>
      <li><a href="https://www.google.com/url?hl=en&q=https://mp.weixin.qq.com/s/PteQ_cJrVFVWO5iGzLGYjg&source=gmail&ust=1524788109417000&usg=AFQjCNFpoexeMT38wA3QwrJsQO8UGRzQeg">How to handle multiple task</a></li>
 </ul>
