--- a/html/solution/graphknowledge.html
+++ b/html/solution/graphknowledge.html
@@ -50,7 +50,7 @@ b. Adjacent list    ( 用顶点来表示图,最常见的一种表达方式）
    
 c.   用边来表达图, 可以遍历转化成点图
 
-int[][] graph = { {1, 2}, {2, 3}, {2,4}  }
+int[][] graph = { {1, 2}, {2, 3}, {2,4}, {2,1}, {4,2}, {3,2}  }
 
 
 
