--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -262,6 +262,8 @@
    <li><a href="solution/BasicCalculator.html">Basic Calculator (字符串表达式 +-（） 难 )</a> <a href="https://leetcode.com/problems/basic-calculator/description/">Q</a>  </li>
          <li><a href="solution/basicCalculatorII.html">Basic Calculator II (字符串表达式 +-*/ 难 )</a> <a href="https://leetcode.com/problems/basic-calculator-ii/description/">Q</a>  </li>
     <li><a href="solution/basicCalculatorIII.html">Basic Calculator III (字符串表达式 +-*/() 与2模板一致 )</a> <a href="https://leetcode.com/problems/basic-calculator-iii/description/">Q</a>  </li>
+    <li><a href="solution/decodeString.html">Decode String )</a> <a href=https://leetcode.com/problems/decode-string/description/>Q</a>  </li>
+
    <li><a href="solution/NextClosestTime.html">NextClosest time(字符串模仿，暴力 )</a> <a href=https://leetcode.com/problems/next-closest-time/description/>Q</a>  </li>
 
 <li><a href="solution/groupshiftedString.html">group shifted string(字符串组的巧妙分组)</a> <a href=https://leetcode.com/problems/group-shifted-strings/description/>Q</a>  </li>
@@ -314,10 +316,11 @@
 	 <li><a href="interview/AmazonInterview1_27_2017.txt">Amazon 01/2017 Phone</a> </li>
 
 
-	 <li><a href="interview/Facebook_2_24_2017.txt">Facebook Phone 02/2017</a> </li>
+	 <li><a href="interview/Facebook_2_24_2017.txt">Facebook Phone(Serilize&Deserilize binary tree) 02/2017</a> </li>
 
 	 <li><a href="interview/uber_4_6_2016.txt">Uber Phone 4/2017</a> </li>
 	 <li><a href="interview/uber_4_25_2018_phone.txt">Uber Phone 4/2018</a> </li>
+   <li> <a href="interview/facebook_5_16.txt">Facebook( LRU Cache) 5/2018</a> </li>
 
 	 </ul>
 
